--- a/Styles/stylereg.css
+++ b/Styles/stylereg.css
@@ -1,10 +1,13 @@
-html,body{
-
-    background: #000000;
+html {
     font-family: 'Constantia', Times, serif;
     font-style: normal;
+    color: #000000;
 }
 
+body {
+    background-color: #000000;
+    height: 1200px;
+}
 
 .signIn {
     
