--- a/stylereg.css
+++ b/stylereg.css
@@ -5,7 +5,7 @@ html {
 
     font-family: 'Constantia', Times, serif;
     font-style: normal;
-    color: #000000;
+    color: #CFCCD1;
 }
 
 .signIn {
